# STDISCM

./: CMakeLists.txt  README.md  client.cpp  ocr.grpc.pb.cc  ocr.grpc.pb.h  ocr.pb.cc  ocr.pb.h  server.cpp
proto/: ocr.proto
